--- a/app/index.html
+++ b/app/index.html
@@ -9,13 +9,13 @@
 
 <body>
   <h1>Open-Journal</h1>
-  <h2>open source peer reviews</h2>
+  <h2>open source peer reviews</h2>  
   <h3>
-    You have <span class="black"><span id="unpublished"></span> unpublished papers</span>
+    There are <span class="black"><span id="paper-count"></span> papers</span>    
   </h3>
-  <h3>
-    You have <span class="black"><span id="published"></span> published papers</span>
-  </h3>
+  <ul id="papers">
+
+  </ul>
   <br>
 
   <h1>Upload a paper</h1>
