--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 
 <body>
     <div id="container"></div>
+    <script src="react.js"></script>
+    <script src="react-dom.js"></script>
     <script src="bundle.js"></script>
 </body>
 
