--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,13 @@
     <div id="container"></div>
     <script src="react.js"></script>
     <script src="react-dom.js"></script>
-    <script src="bundle.js"></script>
 </body>
+
+<script lang="js">
+    var script = document.createElement("script");
+    script.src = "bundle.js";
+    script.type = "text/javascript";
+    document.getElementsByTagName("head")[0].appendChild(script);
+</script>
 
 </html>
